Diable crashutils from build and rename missing drawable (Don't want xda colored one anyway)

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -47,7 +47,7 @@ android {
             ext.enableCrashlytics = false
         }
         full {
-            ext.enableCrashlytics = true
+            ext.enableCrashlytics = false
         }
     }
 }
